Switched to Class-Based Controller and Modular Architecture for scalability

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,18 +1,32 @@
-# compiled output
-.vscode
-/node_modules
+# Node modules and other dependencies
+node_modules
+npm-debug.log
+yarn-error.log
 
-# code formatter
-.eslintrc
-.eslintignore
-.editorconfig
-.huskyrc
-.lintstagedrc.json
-.prettierrc
+# Logs
+logs
+*.log
 
-# test
-jest.config.js
+# Build output
+dist
 
-# docker
+# Optional npm cache directory
+.npm
+
+# Mac OS specific files
+.DS_Store
+
+# Environment variables
+.env
+.env.local
+.env.test
+.env.production
+
+# Docker-related files
 Dockerfile
 docker-compose.yml
+
+# IDEs and editors
+.idea
+.vscode
+*.swp
