--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,55 +1,12 @@
-version: "3.9"
+version: '3.8'
 
 services:
-  proxy:
-    container_name: proxy
-    image: nginx:alpine
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    restart: "unless-stopped"
-    networks:
-      - backend
-
-  server:
-    container_name: server
+  nestjs-app:
     build:
-      context: ./
-      dockerfile: Dockerfile.dev
-    ports:
-      - "3000:3000"
+      context: .
+      dockerfile: Dockerfile
     environment:
-      DB_HOST: localhost
-      DB_PORT: 27017
-      DB_DATABASE: dev
-    volumes:
-      - ./:/app
-      - /app/node_modules
-    restart: "unless-stopped"
-    networks:
-      - backend
-    links:
-      - mongo
-    depends_on:
-      - mongo
-
-  mongo:
-    container_name: mongo
-    image: mongo
+      - PORT=5000
+      - MONGODB_URI=mongodb://blockchain:etech1234@51.77.159.227:27017/collect?authSource=admin
     ports:
-      - "27017:27017"
-    environment:
-      DB_HOST: localhost
-      DB_PORT: 27017
-      DB_DATABASE: dev
-    networks:
-      - backend
-
-networks:
-  backend:
-    driver: bridge
-
-volumes:
-  data:
-    driver: local
+      - "5024:5000"
